# gv

./: .gitignore  README.md  nightly_build.sh
gv/: .cvsignore  AUTHORS  CHANGES  ChangeLog  INSTALL  INSTALL.Unix  Imakefile  Makefile.am  NEWS  README  README.I18N  README.TRANSLATION  bootstrap  config.Unix  config.VMS  configure.ac
gv/doc/: .cvsignore  Imakefile  Makefile.am  comments.doc-gz  gs.interface-gz  gv-1.html  gv-10.html  gv-11.html  gv-12.html  gv-13.html  gv-2.html  gv-3.html  gv-4.html  gv-5.html  gv-6.html  gv-8.html  gv-9.html  gv-faq.html  gv-faq.txt-gz  gv-update-userconfig.1  gv.1  gv.html  gv.ps-gz  gv.texi  key-bindings.txt-gz  version.texi.in
gv/doc/source/: Imakefile  gv.doc  key-bindings.txt  m
gv/lib/: Makefile.am  canonicalize-lgpl.c  dummy.c  getopt.c  getopt1.c  getopt_.h  getopt_int.h  gettimeofday.c  lstat.c  malloca.c  mkdtemp.c  mkstemp.c  readlink.c  secure_getenv.c  stat.c  tempname.c  unistd.c  unistd.h
gv/m4/: gnulib-cache.m4  gnulib-comp.m4
gv/src/: .cvsignore  Aaa.c  Aaa.h  AaaP.h  Aaa_bison.c  Aaa_bison.h  Aaa_bison.yacc  Aaa_intern.h  Aaa_lex.c  Button.c  Button.h  ButtonP.h  Clip.c  Clip.h  ClipP.h  FileSel.c  FileSel.h  FileSelP.h  Frame.c  Frame.h  FrameP.h  Ghostview.c  Ghostview.h  GhostviewP.h  Imakefile  MButton.c  MButton.h  MButtonP.h  Makefile.am  Scrollbar.c  Scrollbar.h  ScrollbarP.h  Switch.c  Switch.h  SwitchP.h  Vlist.c  Vlist.h  VlistP.h  actions.c  actions.h  (+111 more)
gv/src/nls/: LANGUAGES  README.txt
other/doc/svn/: svn.tex
scripts/: README.txt  import-nls.pl  makedist.sh
scripts/svn-gv-i18n/: pre-commit
