# Makefile.am for gv/src
#
# Copyright (C) 2004 José E. Marchesi

# Process this file with automake to get Makefile.in

# File distribution
bin_PROGRAMS = gv
dist_pkglib_DATA = gv_system.ad gv_user.ad gv_class.ad gv_spartan.dat

appdefaultsdir = /etc/X11/app-defaults

appdefaults_DATA = GV

# Clean files
CLEANFILES = GV \
             GV.ad \
             gv_system.ad \
             gv_user.ad \
             gv_spartan.h \
             gv_intern_res_unix.h \
             gv_class.ad \
             gv_class.h \
             gv_make_res.dat \
             gv_intern_res_unix.dat

# Compilation flags
AM_CPPFLAGS = -DNON_BLOCKING_IO -DGV_CODE -DGV_CODE -DGV_LIBDIR=\"$(pkglibdir)\"

AM_CFLAGS =


gv_LDFLAGS = @X_LIBS@

gv_SOURCES = Aaa.c \
             Aaa_bison.c \
             Aaa_lex.c \
             Button.c \
             Clip.c \
             FileSel.c \
             Frame.c \
             Ghostview.c \
             MButton.c \
             Switch.c \
             Vlist.c \
             actions.c \
             callbacks.c \
             confirm.c \
             dialog.c \
             doc_misc.c \
             error.c \
             file.c \
             info.c \
             magmenu.c \
             main.c \
             media.c \
             misc.c \
             miscmenu.c \
             misc_private.c \
             note.c \
             options.c \
             options_fs.c \
             options_gs.c \
             options_gv.c \
             options_setup.c \
             process.c \
             popup.c \
             ps.c \
             resource.c \
             save.c \
             scale.c \
             gv_signal.c \
             version.c \
             widgets_misc.c \
             zoom.c

BUILT_SOURCES = gv_spartan.h gv_intern_res_unix.h gv_class.h


# Additional rules for generating styles

GV : GV.ad
	@echo "creating GV"
	@cp GV.ad GV

GV.ad : gv_system.ad
	@echo "creating GV.ad"y
	@cp gv_system.ad GV.ad

gv_system.ad : gv_user.ad
	@echo "creating gv_system.ad"
	@cp gv_user.ad gv_system.ad

gv_user.ad : gv_user_res.dat gv_intern_res_unix.dat gv_make_res.dat
	@echo "creating gv_user.ad"
	@echo "!"						>  gv_user.ad
	@echo "!  gv_user.ad"				>> gv_user.ad
	@echo "!  User specific application defaults for gv"	>> gv_user.ad
	@echo "!  Copyright (C) 1995, 1996, 1997  Johannes Plass"	>> gv_user.ad
	@echo "!  Copyright (C) 2004 José E. Marchesi"	>> gv_user.ad
	@echo "!"						>> gv_user.ad
	@cat gv_user_res.dat					>> gv_user.ad
	@cat gv_intern_res_unix.dat				>> gv_user.ad
	@cat gv_make_res.dat					>> gv_user.ad



gv_spartan.h : gv_spartan.dat
	@sh ./ad2c gv_spartan.dat > gv_spartan.h

gv_intern_res_unix.h : gv_intern_res_unix.dat
	@echo "creating gv_intern_res_unix.h"
	@sh ./ad2c gv_intern_res_unix.dat > gv_intern_res_unix.h

gv_intern_res_unix.dat :
	@echo "creating gv_intern_res_unix.dat"
	@echo "" 							 >  gv_intern_res_unix.dat
	@echo "!########## gv_intern_res.dat (generated by makefile)" >> gv_intern_res_unix.dat
	@echo ""							>> gv_intern_res_unix.dat
	@echo "GV.gsInterpreter:	gs" >> gv_intern_res_unix.dat
	@echo "GV.gsCmdScanPDF:	gs -dNODISPLAY -dQUIET -sPDFname=%s -sDSCname=%s pdf2dsc.ps -c quit" >> gv_intern_res_unix.dat
	@echo "GV.gsCmdConvPDF:	gs -dNODISPLAY -dQUIET $(PS_LEVEL) -dNOPAUSE -sPSFile=%s %s -c quit" >> gv_intern_res_unix.dat
	@echo "GV.gsX11Device:		-sDEVICE=x11" >> gv_intern_res_unix.dat
	@echo "GV.gsX11AlphaDevice:	-dNOPLATFONTS -sDEVICE=x11alpha" >> gv_intern_res_unix.dat
	@echo "GV.gsSafer:		True" >> gv_intern_res_unix.dat
	@echo "GV.gsQuiet:		True" >> gv_intern_res_unix.dat
	@echo "GV.gsArguments:" >> gv_intern_res_unix.dat
	@echo "GV.uncompressCommand:	gzip -d -c %s > %s" >> gv_intern_res_unix.dat
	@echo "GV.printCommand:	$(PRINT_COMMAND)" >> gv_intern_res_unix.dat


gv_class.h : gv_class.ad
	@echo "creating gv_class.h"
	@sh ./ad2c gv_class.ad > gv_class.h

gv_class.ad : gv_font_res.dat gv_layout_res.dat gv_make_res.dat gv_misc_res.dat gv_user_res.dat gv_intern_res_unix.dat
	@echo "creating gv_class.ad"
	cp gv_copyright.dat gv_class.ad
	@echo "!" >> gv_class.ad
	@echo "!  gv_class.ad" >> gv_class.ad
	@echo "!  Application class defaults for gv" >> gv_class.ad
	@echo "!  Copyright (C) 1995, 1996, 1997  Johannes Plass" >> gv_class.ad
	@echo "!  Copyright (C) 2004 José E. Marchesi" >> gv_class.ad
	@echo "!" >> gv_class.ad
	@echo ""  >> gv_class.ad
	@cat gv_user_res.dat >> gv_class.ad
	@cat gv_intern_res_unix.dat >> gv_class.ad
	@cat gv_make_res.dat >> gv_class.ad
	@cat gv_font_res.dat >> gv_class.ad
	@cat gv_misc_res.dat >> gv_class.ad
	@cat gv_layout_res.dat >> gv_class.ad


gv_make_res.dat :
	@echo "creating gv_make_res.dat"
	@echo ""							>  gv_make_res.dat
	@echo  "!########## gv_make_res.dat (generated by makefile)"	>> gv_make_res.dat
	@echo ""							>> gv_make_res.dat
	@echo "GV.scratchDir:		$(SCRATCH_DIR)"			>> gv_make_res.dat
	@echo "GV.defaultSaveDir:	$(SAVE_DIR)"			>> gv_make_res.dat
	@echo "GV.fallbackPageMedia:	$(PAPERSIZE)"			>> gv_make_res.dat
	@echo "GV.useBackingPixmap:	$(USE_BACKING_PIXMAP)"		>> gv_make_res.dat
	@echo "GV*dirs:		Home\n\\"				>> gv_make_res.dat
	@echo "			Tmp\n\\"				>> gv_make_res.dat
	@echo "			/usr/doc\n\\"				>> gv_make_res.dat
	@echo "			/usr/local/doc"				>> gv_make_res.dat
	@echo "GV*filter:		no .*"				>> gv_make_res.dat
	@echo "GV*filters:		None\n\\"			>> gv_make_res.dat
	@echo "			*.*ps* *.pdf*  no  .*\n\\"		>> gv_make_res.dat
	@echo "			*.*ps*   no  .*\n\\"			>> gv_make_res.dat
	@echo "			*.pdf*  no  .*\n\\"			>> gv_make_res.dat
	@echo "			no  .*"					>> gv_make_res.dat
	@echo ""							>> gv_make_res.dat



# Conditional source files

if USE_SCROLLBAR_CODE
   gv_SOURCES += Scrollbar.c
endif

if USE_SETENV_CODE
   gv_SOURCES += setenv.c getenv.c
endif

if USE_MEMDEBUG_CODE
   gv_SOURCES += d_mem.c d_xtmem.c
endif