# Makefile.am for gv/src
#
# Copyright (C) 2004 José E. Marchesi

# Process this file with automake to get Makefile.in

# File distribution
bin_PROGRAMS = gv
dist_pkglib_DATA = gv_system.ad gv_user.ad gv_class.ad gv_spartan.dat

appdefaultsdir = $(pkglibdir)

appdefaults_DATA = GV

# Clean files
CLEANFILES = GV \
             GV.ad \
             gv_system.ad \
             gv_user.ad \
             gv_spartan.h \
             gv_intern_res_unix.h \
             gv_class.ad \
             gv_class.h \
             gv_make_res.dat \
             gv_intern_res_unix.dat

# Compilation flags
AM_CPPFLAGS = -DNON_BLOCKING_IO -DGV_CODE -DGV_CODE -DGV_LIBDIR=\"$(pkglibdir)\"

AM_CFLAGS =


gv_LDFLAGS = @X_LIBS@

gv_SOURCES = Aaa.c \
             Aaa_bison.c \
             Aaa_lex.c \
             Button.c \
             Clip.c \
             FileSel.c \
             Frame.c \
             Ghostview.c \
             MButton.c \
             Switch.c \
             Vlist.c \
             actions.c \
             callbacks.c \
             confirm.c \
             dialog.c \
             doc_misc.c \
             error.c \
             file.c \
             info.c \
             magmenu.c \
             main.c \
             media.c \
             misc.c \
             miscmenu.c \
             misc_private.c \
             note.c \
             options.c \
             options_fs.c \
             options_gs.c \
             options_gv.c \
             options_setup.c \
             process.c \
             popup.c \
             ps.c \
             resource.c \
             save.c \
             scale.c \
             gv_signal.c \
             version.c \
             widgets_misc.c \
             zoom.c

BUILT_SOURCES = gv_spartan.h gv_intern_res_unix.h gv_class.h


# Additional rules for generating styles

GV : $(srcdir)/GV.ad
	@echo "creating GV"
	@cp $(srcdir)/GV.ad $(srcdir)/GV

$(srcdir)/GV.ad : $(srcdir)/gv_system.ad
	@echo "creating GV.ad"y
	@cp $(srcdir)/gv_system.ad $(srcdir)/GV.ad

$(srcdir)/gv_system.ad : $(srcdir)/gv_user.ad
	@echo "creating gv_system.ad"
	@cp $(srcdir)/gv_user.ad $(srcdir)/gv_system.ad

$(srcdir)/gv_user.ad : $(srcdir)/gv_user_res.dat $(srcdir)/gv_intern_res_unix.dat $(srcdir)/gv_make_res.dat
	@echo "creating gv_user.ad"
	@echo "!"						>  $(srcdir)/gv_user.ad
	@echo "!  gv_user.ad"				>> $(srcdir)/gv_user.ad
	@echo "!  User specific application defaults for gv"	>> $(srcdir)/gv_user.ad
	@echo "!  Copyright (C) 1995, 1996, 1997  Johannes Plass"	>> $(srcdir)/gv_user.ad
	@echo "!  Copyright (C) 2004 José E. Marchesi"	>> $(srcdir)/gv_user.ad
	@echo "!"						>> $(srcdir)/gv_user.ad
	@cat $(srcdir)/gv_user_res.dat					>> $(srcdir)/gv_user.ad
	@cat $(srcdir)/gv_intern_res_unix.dat				>> $(srcdir)/gv_user.ad
	@cat $(srcdir)/gv_make_res.dat					>> $(srcdir)/gv_user.ad



$(srcdir)/gv_spartan.h : $(srcdir)/gv_spartan.dat
	@sh $(srcdir)/ad2c $(srcdir)/gv_spartan.dat > $(srcdir)/gv_spartan.h

$(srcdir)/gv_intern_res_unix.h : $(srcdir)/gv_intern_res_unix.dat
	@echo "creating gv_intern_res_unix.h"
	@sh $(srcdir)/ad2c $(srcdir)/gv_intern_res_unix.dat > $(srcdir)/gv_intern_res_unix.h

$(srcdir)/gv_intern_res_unix.dat :
	@echo "creating gv_intern_res_unix.dat"
	@echo "" 							 >  $(srcdir)/gv_intern_res_unix.dat
	@echo "!########## gv_intern_res.dat (generated by makefile)" >> $(srcdir)/gv_intern_res_unix.dat
	@echo ""							>> $(srcdir)/gv_intern_res_unix.dat
	@echo "GV.gsInterpreter:	gs" >> $(srcdir)/gv_intern_res_unix.dat
	@echo "GV.gsCmdScanPDF:	gs -dNODISPLAY -dQUIET -sPDFname=%s -sDSCname=%s pdf2dsc.ps -c quit" >> $(srcdir)/gv_intern_res_unix.dat
	@echo "GV.gsCmdConvPDF:	gs -dNODISPLAY -dQUIET $(PS_LEVEL) -dNOPAUSE -sPSFile=%s %s -c quit" >> $(srcdir)/gv_intern_res_unix.dat
	@echo "GV.gsX11Device:		-sDEVICE=x11" >> $(srcdir)/gv_intern_res_unix.dat
	@echo "GV.gsX11AlphaDevice:	-dNOPLATFONTS -sDEVICE=x11alpha" >> $(srcdir)/gv_intern_res_unix.dat
	@echo "GV.gsSafer:		True" >> $(srcdir)/gv_intern_res_unix.dat
	@echo "GV.gsQuiet:		True" >> $(srcdir)/gv_intern_res_unix.dat
	@echo "GV.gsArguments:" >> $(srcdir)/gv_intern_res_unix.dat
	@echo "GV.uncompressCommand:	gzip -d -c %s > %s" >> $(srcdir)/gv_intern_res_unix.dat
	@echo "GV.printCommand:	$(PRINT_COMMAND)" >> $(srcdir)/gv_intern_res_unix.dat


$(srcdir)/gv_class.h : $(srcdir)/gv_class.ad
	@echo "creating gv_class.h"
	@sh $(srcdir)/ad2c $(srcdir)/gv_class.ad > $(srcdir)/gv_class.h

$(srcdir)/gv_class.ad : $(srcdir)/gv_font_res.dat $(srcdir)/gv_layout_res.dat $(srcdir)/gv_make_res.dat $(srcdir)/gv_misc_res.dat $(srcdir)/gv_user_res.dat $(srcdir)/gv_intern_res_unix.dat
	@echo "creating gv_class.ad"
	cp $(srcdir)/gv_copyright.dat $(srcdir)/gv_class.ad
	@echo "!" >> $(srcdir)/gv_class.ad
	@echo "!  gv_class.ad" >> $(srcdir)/gv_class.ad
	@echo "!  Application class defaults for gv" >> $(srcdir)/gv_class.ad
	@echo "!  Copyright (C) 1995, 1996, 1997  Johannes Plass" >> $(srcdir)/gv_class.ad
	@echo "!  Copyright (C) 2004 José E. Marchesi" >> $(srcdir)/gv_class.ad
	@echo "!" >> $(srcdir)/gv_class.ad
	@echo ""  >> $(srcdir)/gv_class.ad
	@cat $(srcdir)/gv_user_res.dat >> $(srcdir)/gv_class.ad
	@cat $(srcdir)/gv_intern_res_unix.dat >> $(srcdir)/gv_class.ad
	@cat $(srcdir)/gv_make_res.dat >> $(srcdir)/gv_class.ad
	@cat $(srcdir)/gv_font_res.dat >> $(srcdir)/gv_class.ad
	@cat $(srcdir)/gv_misc_res.dat >> $(srcdir)/gv_class.ad
	@cat $(srcdir)/gv_layout_res.dat >> $(srcdir)/gv_class.ad


$(srcdir)/gv_make_res.dat :
	@echo "creating gv_make_res.dat"
	@echo ""							>  $(srcdir)/gv_make_res.dat
	@echo  "!########## gv_make_res.dat (generated by makefile)"	>> $(srcdir)/gv_make_res.dat
	@echo ""							>> $(srcdir)/gv_make_res.dat
	@echo "GV.scratchDir:		$(SCRATCH_DIR)"			>> $(srcdir)/gv_make_res.dat
	@echo "GV.defaultSaveDir:	$(SAVE_DIR)"			>> $(srcdir)/gv_make_res.dat
	@echo "GV.fallbackPageMedia:	$(PAPERSIZE)"			>> $(srcdir)/gv_make_res.dat
	@echo "GV.useBackingPixmap:	$(USE_BACKING_PIXMAP)"		>> $(srcdir)/gv_make_res.dat
	@echo "GV*dirs:		Home\n\\"				>> $(srcdir)/gv_make_res.dat
	@echo "			Tmp\n\\"				>> $(srcdir)/gv_make_res.dat
	@echo "			/usr/doc\n\\"				>> $(srcdir)/gv_make_res.dat
	@echo "			/usr/local/doc"				>> $(srcdir)/gv_make_res.dat
	@echo "GV*filter:		no .*"				>> $(srcdir)/gv_make_res.dat
	@echo "GV*filters:		None\n\\"			>> $(srcdir)/gv_make_res.dat
	@echo "			*.*ps* *.pdf*  no  .*\n\\"		>> $(srcdir)/gv_make_res.dat
	@echo "			*.*ps*   no  .*\n\\"			>> $(srcdir)/gv_make_res.dat
	@echo "			*.pdf*  no  .*\n\\"			>> $(srcdir)/gv_make_res.dat
	@echo "			no  .*"					>> $(srcdir)/gv_make_res.dat
	@echo ""							>> $(srcdir)/gv_make_res.dat



# Conditional source files

if USE_SCROLLBAR_CODE
   gv_SOURCES += Scrollbar.c
endif

if USE_SETENV_CODE
   gv_SOURCES += setenv.c getenv.c
endif

if USE_MEMDEBUG_CODE
   gv_SOURCES += d_mem.c d_xtmem.c
endif